adding screenshot to front page, sentinel config info for deployment

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
 	<p>
 		To view the repository, click the GitHub logo at the bottom of the page.
 	</p>
+	<img alt="Dashboard Screenshot" src="/images/dashboard-view.png" width="800px" />
 	<div id="article">
 		<h1> Recent Articles and Posts </h1>
 		<div class="span6">
