--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,11 +38,10 @@
     ga('send', 'pageview');
 
 	</script>
-	<script>$('.dropdown-toggle').dropdown()</script>
 	</head>
 
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<nav class="navbar navbar-fixed-top" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainnav">
