--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,14 +3,15 @@
 		<footer id="footer">
 			<div class="container">
 				<div class="row-fluid">
-					<div class="span5 cp">
+					<div class="span4 cp">
 						&copy; 2014 <a target="_blank" href="http://www.iamtherealbill.com/" title="Bill Anderson">Bill Anderson</a>. All Rights Reserved.
 					</div>
-					<div class="span6">
+					<div class="span5">
 						<ul class="social pull-right">
+							<li><a href="https://groups.google.com/d/forum/redskull-users" alt="Discussion list"><i class="icon-envelope"></i></a></li>
 							<li><a href="http://twitter.com/ucntcme"><i class="icon-twitter"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="https://plus.google.com/112346988179714606429/"><i class="icon-google-plus"></i></a></li>                       
+							<li><a href="https://plus.google.com/112346988179714606429/"><i class="icon-google-plus"></i></a></li>
 							<li><a href="#"><i class="icon-youtube"></i></a></li>
 							<li><a href="#"><i class="icon-rss"></i></a></li>
 							<li><a href="https://github.com/therealbill/redskull"><i class="icon-github-alt"></i></a></li>
