UI fixes, discussion post

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -70,7 +70,7 @@
 							{{end}}
 							</ul>
 						</li>
-						<li class="{{if eq .Url "/blog/"}}active{{end}}"><a href="/blog/">Blog</a></li> 
+						<li class="{{if eq .Url "/posts/"}}active{{end}}"><a href="/posts/">Blog</a></li> 
 						<li class="{{if eq .Url "/tags/"}}active{{end}}"><a href="/tags/">Tags</a></li> 
 						<li class="{{if eq .Url "/about/"}}active{{end}}"><a href="/about/">About RedSkull</a></li>
 					</ul>        
