--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,14 +13,14 @@
 		</p>
 		<img alt="Dashboard Screenshot" src="/images/dashboard-view.png" width="800px" />
 	</div>
-	<div class="span3">
+	<div class="span4">
 		<br />
 		<br />
 		<h3> Recent Articles and Posts </h3>
-		<div class="span6">
+		<div>
 			<ul class="posts"> 
 				{{ range first 5 .Data.Pages }}
-				<li><span><a href="{{ .Permalink }}">{{ .Title }}</a><time class="pull-right post-list">{{ .Date.Format "Jan 2, 2006" }}</h4></time></span></span></li>
+				<li><span><a href="{{ .Permalink }}">{{ .Title }}</a><time class="pull-right post-list">{{ .Date.Format "Jan 2 2006" }}</h4></time></span></span></li>
 				{{ end }}
 			</ul>
 		</div>
