--- a/layouts/guide/single.html
+++ b/layouts/guide/single.html
@@ -13,7 +13,7 @@
 			<b>Author:</b> {{.Params.author.name}} <br />
 			<b>Tags:</b> 
 			{{range .Params.tags}}
-				<button type="button" class="btn btn-sm btn-info"><a href="/tags/{{.}}">{{.}}</a></button>
+				<a href="/tags/{{.}}"><button type="button" class="btn btn-sm btn-info">{{.}}</button></a>
 			{{end}}
 		</div>
 	</div>
