--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -21,6 +21,8 @@
 			</div>
 		</footer>
 		<!--/Footer-->
+
+	<script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	<script src="/js/vendor/jquery-1.9.1.min.js"></script>
 	<script src="/js/vendor/bootstrap.min.js"></script>
 	<script src="/js/main.js"></script>
