adding tracking info update and GSG part 3

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,6 +22,11 @@
 		</footer>
 		<!--/Footer-->
 
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/css/sl-slide.css">
+
 	<script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 	<script src="/js/vendor/jquery-1.9.1.min.js"></script>
 	<script src="/js/vendor/bootstrap.min.js"></script>
