--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,18 +11,13 @@
 		<title>Redskull.io | Home</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
-
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-		<link rel="stylesheet" href="/css/font-awesome.min.css">
-		<link rel="stylesheet" href="/css/main.css">
-		<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="/css/sl-slide.css">
 		<link rel="shortcut icon" href="/images/ico/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/ico/apple-touch-icon-144-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/ico/apple-touch-icon-114-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/ico/apple-touch-icon-72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="/images/ico/apple-touch-icon-57-precomposed.png">
+		<link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+		<link rel="stylesheet" href="/css/main.css">
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,6 +25,7 @@
 				 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 			ga('create', 'UA-24873178-2', 'auto');
+			ga('require', 'linkid', 'linkid.js');
 			ga('require', 'displayfeatures');
 			ga('send', 'pageview');
 
