--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,13 +13,13 @@
 		</p>
 		<img alt="Dashboard Screenshot" src="/images/dashboard-view.png" width="800px" />
 	</div>
-	<div class="span4">
+	<div class="span3">
 		<br />
 		<br />
 		<h3> Recent Articles and Posts </h3>
 		<div>
 			<ul class="posts"> 
-				{{ range first 5 .Data.Pages }}
+				{{ range first 5 .Data.Pages.ByDate.Reverse }}
 				<li><span><a href="{{ .Permalink }}">{{ .Title }}</a><time class="pull-right post-list">{{ .Date.Format "Jan 2 2006" }}</h4></time></span></span></li>
 				{{ end }}
 			</ul>
