--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,29 +1,24 @@
 {{ template "partials/header.html" . }}
 
-<div class="row">
-	<div class="span8">
-		<h1> Welcome to RedSkull.io </h1>
-		<p> 
-			RedSkull.io is the website for the RedSkull Sentinel Management System
-			project. Here you will (over time) find guides, documentation, and
-			assistance with running, contributing to, and understanding RedSkull.
-		</p>
-		<p>
-			To view the repository, click the GitHub logo at the bottom of the page.
-		</p>
-		<img alt="Dashboard Screenshot" src="/images/dashboard-view.png" width="800px" />
-	</div>
-	<div class="span3">
-		<br />
-		<br />
-		<h3> Recent Articles and Posts </h3>
-		<div>
+	<h1> Welcome to RedSkull.io </h1>
+	<p> 
+		RedSkull.io is the website for the RedSkull Sentinel Management System
+		project. Here you will (over time) find guides, documentation, and
+		assistance with running, contributing to, and understanding RedSkull.
+	</p>
+	<p>
+	To view the repository, click the GitHub logo at the bottom of the page, or click <a href="https://github.com/therealbill/redskull">Here</a>.
+	</p>
+	<img alt="Dashboard Screenshot" src="/images/dashboard-view.png" width="800px" />
+	<div id="article">
+		<h1> Recent Articles and Posts </h1>
+		<div class="span6">
 			<ul class="posts"> 
-				{{ range first 5 .Data.Pages.ByDate.Reverse }}
-				<li><span><a href="{{ .Permalink }}">{{ .Title }}</a><time class="pull-right post-list">{{ .Date.Format "Jan 2 2006" }}</h4></time></span></span></li>
-				{{ end }}
+			  {{ range first 5 .Data.Pages }}
+			  <li><span><a href="{{ .Permalink }}">{{ .Title }}</a><time class="pull-right post-list">{{ .Date.Format "Jan 2, 2006" }}</h4></time></span></span></li>
+			  {{ end }}
 			</ul>
 		</div>
 	</div>
-</div>
+	<br />
 {{ template "partials/footer.html" }}
